internal/fixtures/architecture/negative/domain-browser-global/packages/domain/src/bad.ts
export const viewport = window.innerWidth;
